--- a/packages/gnuradio/Makefile
+++ b/packages/gnuradio/Makefile
@@ -32,7 +32,7 @@ endef
 
 define Package/gnuradio/install
         $(INSTALL_DIR) $(1)/usr/sbin
-        $(INSTALL_BIN) $(PKG_BUILD_DIR)/brctl/brctl $(1)/usr/sbin/
+        $(INSTALL_BIN) $(PKG_BUILD_DIR)/gnuradio/ $(1)/usr/sbin/
 endef
 
 $(eval $(call BuildPackage,gnuradio))
