--- a/.config
+++ b/.config
@@ -3390,7 +3390,7 @@ CONFIG_PACKAGE_perlbase-xsloader=y
 # Compression
 #
 CONFIG_PACKAGE_libbz2=y
-# CONFIG_PACKAGE_liblzma is not set
+CONFIG_PACKAGE_liblzma=y
 # CONFIG_PACKAGE_libunrar is not set
 
 #
@@ -3726,7 +3726,7 @@ CONFIG_PACKAGE_libf2fs=y
 # CONFIG_PACKAGE_libfdt is not set
 # CONFIG_PACKAGE_libffmpeg-audio-dec is not set
 # CONFIG_PACKAGE_libffmpeg-custom is not set
-# CONFIG_PACKAGE_libffmpeg-full is not set
+CONFIG_PACKAGE_libffmpeg-full=y
 # CONFIG_PACKAGE_libffmpeg-mini is not set
 CONFIG_PACKAGE_libflac=y
 CONFIG_PACKAGE_libgmp=y
@@ -3740,7 +3740,7 @@ CONFIG_PACKAGE_libgmp=y
 # CONFIG_PACKAGE_libical is not set
 # CONFIG_PACKAGE_libiconv is not set
 # CONFIG_PACKAGE_libiconv-full is not set
-# CONFIG_PACKAGE_libid3tag is not set
+CONFIG_PACKAGE_libid3tag=y
 # CONFIG_PACKAGE_libidn is not set
 # CONFIG_PACKAGE_libimobiledevice is not set
 # CONFIG_PACKAGE_libinput is not set
@@ -3756,7 +3756,7 @@ CONFIG_PACKAGE_libkmod=y
 CONFIG_PACKAGE_liblua=y
 # CONFIG_PACKAGE_liblz4 is not set
 # CONFIG_PACKAGE_liblzo is not set
-# CONFIG_PACKAGE_libmad is not set
+CONFIG_PACKAGE_libmad=y
 # CONFIG_PACKAGE_libmagic is not set
 # CONFIG_PACKAGE_libmcrypt is not set
 # CONFIG_PACKAGE_libmicrohttpd is not set
@@ -3770,7 +3770,7 @@ CONFIG_PACKAGE_libmnl=y
 # CONFIG_PACKAGE_libmosquittopp is not set
 # CONFIG_PACKAGE_libmount is not set
 # CONFIG_PACKAGE_libmpdclient is not set
-# CONFIG_PACKAGE_libmpeg2 is not set
+CONFIG_PACKAGE_libmpeg2=y
 # CONFIG_PACKAGE_libmpg123 is not set
 # CONFIG_PACKAGE_libmraa is not set
 # CONFIG_PACKAGE_libmysqlclient is not set
@@ -4242,19 +4242,119 @@ CONFIG_POSTFIX_SQLITE=y
 #
 # CONFIG_PACKAGE_oggfwd is not set
 # CONFIG_PACKAGE_crtmpserver is not set
-# CONFIG_PACKAGE_ffmpeg is not set
+CONFIG_PACKAGE_ffmpeg=y
 # CONFIG_PACKAGE_ffprobe is not set
-# CONFIG_PACKAGE_ffserver is not set
+CONFIG_PACKAGE_ffserver=y
 # CONFIG_PACKAGE_fswebcam is not set
 # CONFIG_PACKAGE_grilo is not set
 # CONFIG_PACKAGE_grilo-plugins is not set
-# CONFIG_PACKAGE_gst1-libav is not set
+CONFIG_PACKAGE_gst1-libav=y
+
+#
+# Select GStreamer libav configuration options
+#
+CONFIG_GST1_LIBAV_IPV6=y
+CONFIG_GST1_LIBAV_PATENTED=y
+CONFIG_GET_LIBAV_COMMON_AV_SUPPORT=y
+
+#
+# Encoders ---
+#
+# CONFIG_GST1_LIBAV_ENCODER_ac3 is not set
+# CONFIG_GST1_LIBAV_ENCODER_jpegls is not set
+# CONFIG_GST1_LIBAV_ENCODER_mpeg1video is not set
+# CONFIG_GST1_LIBAV_ENCODER_mpeg2video is not set
+CONFIG_GST1_LIBAV_ENCODER_mpeg4=y
+# CONFIG_GST1_LIBAV_ENCODER_pcm_s16be is not set
+# CONFIG_GST1_LIBAV_ENCODER_pcm_s16le is not set
+# CONFIG_GST1_LIBAV_ENCODER_png is not set
+# CONFIG_GST1_LIBAV_ENCODER_vorbis is not set
+# CONFIG_GST1_LIBAV_ENCODER_zlib is not set
+
+#
+# Decoders ---
+#
+CONFIG_GST1_LIBAV_DECODER_aac=y
+CONFIG_GST1_LIBAV_DECODER_ac3=y
+CONFIG_GST1_LIBAV_DECODER_atrac3=y
+# CONFIG_GST1_LIBAV_DECODER_gif is not set
+CONFIG_GST1_LIBAV_DECODER_h264=y
+CONFIG_GST1_LIBAV_DECODER_jpegls=y
+# CONFIG_GST1_LIBAV_DECODER_mp2 is not set
+CONFIG_GST1_LIBAV_DECODER_mp3=y
+CONFIG_GST1_LIBAV_DECODER_mpegvideo=y
+CONFIG_GST1_LIBAV_DECODER_mpeg1video=y
+CONFIG_GST1_LIBAV_DECODER_mpeg2video=y
+CONFIG_GST1_LIBAV_DECODER_mpeg4=y
+CONFIG_GST1_LIBAV_DECODER_mpeg4aac=y
+CONFIG_GST1_LIBAV_DECODER_pcm_s16be=y
+CONFIG_GST1_LIBAV_DECODER_pcm_s16le=y
+CONFIG_GST1_LIBAV_DECODER_png=y
+CONFIG_GST1_LIBAV_DECODER_vorbis=y
+CONFIG_GST1_LIBAV_DECODER_wmav1=y
+CONFIG_GST1_LIBAV_DECODER_wmav2=y
+CONFIG_GST1_LIBAV_DECODER_zlib=y
+
+#
+# Muxers ---
+#
+# CONFIG_GST1_LIBAV_MUXER_ac3 is not set
+# CONFIG_GST1_LIBAV_MUXER_ffm is not set
+CONFIG_GST1_LIBAV_MUXER_h264=y
+# CONFIG_GST1_LIBAV_MUXER_mp3 is not set
+# CONFIG_GST1_LIBAV_MUXER_mp4 is not set
+# CONFIG_GST1_LIBAV_MUXER_mpeg1video is not set
+# CONFIG_GST1_LIBAV_MUXER_mpeg2video is not set
+# CONFIG_GST1_LIBAV_MUXER_mpegts is not set
+# CONFIG_GST1_LIBAV_MUXER_ogg is not set
+# CONFIG_GST1_LIBAV_MUXER_oss is not set
+CONFIG_GST1_LIBAV_MUXER_rtp=y
+
+#
+# Demuxers ---
+#
+CONFIG_GST1_LIBAV_DEMUXER_ac3=y
+# CONFIG_GST1_LIBAV_DEMUXER_ffm is not set
+CONFIG_GST1_LIBAV_DEMUXER_h264=y
+CONFIG_GST1_LIBAV_DEMUXER_mp3=y
+CONFIG_GST1_LIBAV_DEMUXER_mpegvideo=y
+# CONFIG_GST1_LIBAV_DEMUXER_mpegps is not set
+CONFIG_GST1_LIBAV_DEMUXER_mpegts=y
+CONFIG_GST1_LIBAV_DEMUXER_ogg=y
+CONFIG_GST1_LIBAV_DEMUXER_rm=y
+CONFIG_GST1_LIBAV_DEMUXER_rtsp=y
+CONFIG_GST1_LIBAV_DEMUXER_sdp=y
+
+#
+# Parsers ---
+#
+CONFIG_GST1_LIBAV_PARSER_aac=y
+CONFIG_GST1_LIBAV_PARSER_ac3=y
+CONFIG_GST1_LIBAV_PARSER_h264=y
+CONFIG_GST1_LIBAV_PARSER_mpegaudio=y
+CONFIG_GST1_LIBAV_PARSER_mpegvideo=y
+CONFIG_GST1_LIBAV_PARSER_mpeg4video=y
+
+#
+# Protocols ---
+#
+CONFIG_GST1_LIBAV_PROTOCOL_file=y
+CONFIG_GST1_LIBAV_PROTOCOL_http=y
+CONFIG_GST1_LIBAV_PROTOCOL_pipe=y
+CONFIG_GST1_LIBAV_PROTOCOL_rtp=y
+CONFIG_GST1_LIBAV_PROTOCOL_tcp=y
+CONFIG_GST1_LIBAV_PROTOCOL_udp=y
+CONFIG_PACKAGE_gst1-mod-adpcmdec=y
+CONFIG_PACKAGE_gst1-mod-adpcmenc=y
+CONFIG_PACKAGE_gst1-mod-aiff=y
 CONFIG_PACKAGE_gst1-mod-alaw=y
 CONFIG_PACKAGE_gst1-mod-alpha=y
 CONFIG_PACKAGE_gst1-mod-alphacolor=y
 CONFIG_PACKAGE_gst1-mod-alsa=y
 CONFIG_PACKAGE_gst1-mod-apetag=y
 CONFIG_PACKAGE_gst1-mod-app=y
+CONFIG_PACKAGE_gst1-mod-asf=y
+CONFIG_PACKAGE_gst1-mod-asfmux=y
 CONFIG_PACKAGE_gst1-mod-audioconvert=y
 CONFIG_PACKAGE_gst1-mod-audiofx=y
 CONFIG_PACKAGE_gst1-mod-audioparsers=y
@@ -4262,46 +4362,75 @@ CONFIG_PACKAGE_gst1-mod-audiorate=y
 CONFIG_PACKAGE_gst1-mod-audioresample=y
 CONFIG_PACKAGE_gst1-mod-audiotestsrc=y
 CONFIG_PACKAGE_gst1-mod-auparse=y
+CONFIG_PACKAGE_gst1-mod-autoconvert=y
 CONFIG_PACKAGE_gst1-mod-autodetect=y
 CONFIG_PACKAGE_gst1-mod-avi=y
+CONFIG_PACKAGE_gst1-mod-bayer=y
+CONFIG_PACKAGE_gst1-mod-camerabin2=y
 CONFIG_PACKAGE_gst1-mod-cutter=y
+CONFIG_PACKAGE_gst1-mod-dataurisrc=y
 CONFIG_PACKAGE_gst1-mod-debug=y
+CONFIG_PACKAGE_gst1-mod-debugutilsbad=y
 CONFIG_PACKAGE_gst1-mod-deinterlace=y
 CONFIG_PACKAGE_gst1-mod-dtmf=y
+CONFIG_PACKAGE_gst1-mod-dvdspu=y
 CONFIG_PACKAGE_gst1-mod-effectv=y
 CONFIG_PACKAGE_gst1-mod-equalizer=y
+CONFIG_PACKAGE_gst1-mod-fbdevsink=y
+CONFIG_PACKAGE_gst1-mod-festival=y
 CONFIG_PACKAGE_gst1-mod-flac=y
 CONFIG_PACKAGE_gst1-mod-flv=y
 CONFIG_PACKAGE_gst1-mod-flxdec=y
+CONFIG_PACKAGE_gst1-mod-frei0r=y
 CONFIG_PACKAGE_gst1-mod-gio=y
 CONFIG_PACKAGE_gst1-mod-goom=y
 CONFIG_PACKAGE_gst1-mod-goom2k1=y
+CONFIG_PACKAGE_gst1-mod-hls=y
 CONFIG_PACKAGE_gst1-mod-icydemux=y
 CONFIG_PACKAGE_gst1-mod-id3demux=y
+CONFIG_PACKAGE_gst1-mod-id3tag=y
 CONFIG_PACKAGE_gst1-mod-imagefreeze=y
 CONFIG_PACKAGE_gst1-mod-interleave=y
 CONFIG_PACKAGE_gst1-mod-isomp4=y
 CONFIG_PACKAGE_gst1-mod-jpeg=y
+CONFIG_PACKAGE_gst1-mod-jpegformat=y
+CONFIG_PACKAGE_gst1-mod-lame=y
 CONFIG_PACKAGE_gst1-mod-level=y
+CONFIG_PACKAGE_gst1-mod-mad=y
 CONFIG_PACKAGE_gst1-mod-matroska=y
+CONFIG_PACKAGE_gst1-mod-mpeg2dec=y
+CONFIG_PACKAGE_gst1-mod-mpegpsdemux=y
+CONFIG_PACKAGE_gst1-mod-mpegpsmux=y
 CONFIG_PACKAGE_gst1-mod-mulaw=y
 CONFIG_PACKAGE_gst1-mod-multifile=y
 CONFIG_PACKAGE_gst1-mod-multipart=y
+CONFIG_PACKAGE_gst1-mod-mxf=y
 CONFIG_PACKAGE_gst1-mod-navigationtest=y
 CONFIG_PACKAGE_gst1-mod-ogg=y
 CONFIG_PACKAGE_gst1-mod-opus=y
+CONFIG_PACKAGE_gst1-mod-opusparse=y
 CONFIG_PACKAGE_gst1-mod-oss4audio=y
 CONFIG_PACKAGE_gst1-mod-ossaudio=y
+CONFIG_PACKAGE_gst1-mod-pcapparse=y
 CONFIG_PACKAGE_gst1-mod-playback=y
 CONFIG_PACKAGE_gst1-mod-png=y
+CONFIG_PACKAGE_gst1-mod-pnm=y
+CONFIG_PACKAGE_gst1-mod-rawparse=y
 CONFIG_PACKAGE_gst1-mod-replaygain=y
+CONFIG_PACKAGE_gst1-mod-rfbsrc=y
 CONFIG_PACKAGE_gst1-mod-rtp=y
 CONFIG_PACKAGE_gst1-mod-rtpmanager=y
 CONFIG_PACKAGE_gst1-mod-rtsp=y
+CONFIG_PACKAGE_gst1-mod-sdpelem=y
+CONFIG_PACKAGE_gst1-mod-segmentclip=y
 CONFIG_PACKAGE_gst1-mod-shapewipe=y
+CONFIG_PACKAGE_gst1-mod-shm=y
+CONFIG_PACKAGE_gst1-mod-siren=y
 CONFIG_PACKAGE_gst1-mod-smpte=y
 CONFIG_PACKAGE_gst1-mod-souphttpsrc=y
 CONFIG_PACKAGE_gst1-mod-spectrum=y
+CONFIG_PACKAGE_gst1-mod-speed=y
+CONFIG_PACKAGE_gst1-mod-subenc=y
 CONFIG_PACKAGE_gst1-mod-tcp=y
 CONFIG_PACKAGE_gst1-mod-theora=y
 CONFIG_PACKAGE_gst1-mod-typefindfunctions=y
@@ -4320,8 +4449,10 @@ CONFIG_PACKAGE_gst1-mod-vorbis=y
 CONFIG_PACKAGE_gst1-mod-vpx=y
 CONFIG_PACKAGE_gst1-mod-wavenc=y
 CONFIG_PACKAGE_gst1-mod-wavparse=y
+CONFIG_PACKAGE_gst1-plugins-bad=y
 CONFIG_PACKAGE_gst1-plugins-base=y
 CONFIG_PACKAGE_gst1-plugins-good=y
+CONFIG_PACKAGE_gst1-plugins-ugly=y
 CONFIG_PACKAGE_gstreamer1=y
 CONFIG_PACKAGE_gstreamer1-libs=y
 
@@ -4337,7 +4468,25 @@ CONFIG_PACKAGE_libgstreamer1=y
 CONFIG_PACKAGE_libgst1check=y
 CONFIG_PACKAGE_libgst1controller=y
 CONFIG_PACKAGE_libgst1net=y
-# CONFIG_PACKAGE_gstreamer1-plugins-bad is not set
+CONFIG_PACKAGE_gstreamer1-plugins-bad=y
+
+#
+# Select GStreamer bad modules and libraries
+#
+CONFIG_gst1-plugins-bad-all=y
+
+#
+# Modules
+#
+
+#
+# Libraries
+#
+CONFIG_PACKAGE_libgst1adaptivedemux=y
+CONFIG_PACKAGE_libgst1photography=y
+CONFIG_PACKAGE_libgst1basecamerabinsrc=y
+CONFIG_PACKAGE_libgst1uridownloader=y
+CONFIG_PACKAGE_libgst1badbase=y
 CONFIG_PACKAGE_gstreamer1-plugins-base=y
 
 #
@@ -4373,7 +4522,16 @@ CONFIG_gst1-plugins-good-all=y
 #
 # Modules
 #
-# CONFIG_PACKAGE_gstreamer1-plugins-ugly is not set
+CONFIG_PACKAGE_gstreamer1-plugins-ugly=y
+
+#
+# Select GStreamer ugly modules
+#
+CONFIG_gst1-plugins-ugly-all=y
+
+#
+# Modules
+#
 CONFIG_PACKAGE_gstreamer1-utils=y
 # CONFIG_PACKAGE_icecast is not set
 # CONFIG_PACKAGE_lcdgrilo is not set
@@ -5218,7 +5376,7 @@ CONFIG_DRIVER_11AC_SUPPORT=y
 # CONFIG_PACKAGE_forked-daapd is not set
 # CONFIG_PACKAGE_ices is not set
 # CONFIG_PACKAGE_lame is not set
-# CONFIG_PACKAGE_lame-lib is not set
+CONFIG_PACKAGE_lame-lib=y
 # CONFIG_PACKAGE_liblo-utils is not set
 # CONFIG_PACKAGE_madplay is not set
 # CONFIG_PACKAGE_madplay-alsa is not set
