removed gstreamer-ugly

--- a/.config
+++ b/.config
@@ -4353,7 +4353,6 @@ CONFIG_PACKAGE_gst1-mod-alphacolor=y
 CONFIG_PACKAGE_gst1-mod-alsa=y
 CONFIG_PACKAGE_gst1-mod-apetag=y
 CONFIG_PACKAGE_gst1-mod-app=y
-CONFIG_PACKAGE_gst1-mod-asf=y
 CONFIG_PACKAGE_gst1-mod-asfmux=y
 CONFIG_PACKAGE_gst1-mod-audioconvert=y
 CONFIG_PACKAGE_gst1-mod-audiofx=y
@@ -4394,11 +4393,8 @@ CONFIG_PACKAGE_gst1-mod-interleave=y
 CONFIG_PACKAGE_gst1-mod-isomp4=y
 CONFIG_PACKAGE_gst1-mod-jpeg=y
 CONFIG_PACKAGE_gst1-mod-jpegformat=y
-CONFIG_PACKAGE_gst1-mod-lame=y
 CONFIG_PACKAGE_gst1-mod-level=y
-CONFIG_PACKAGE_gst1-mod-mad=y
 CONFIG_PACKAGE_gst1-mod-matroska=y
-CONFIG_PACKAGE_gst1-mod-mpeg2dec=y
 CONFIG_PACKAGE_gst1-mod-mpegpsdemux=y
 CONFIG_PACKAGE_gst1-mod-mpegpsmux=y
 CONFIG_PACKAGE_gst1-mod-mulaw=y
@@ -4452,7 +4448,6 @@ CONFIG_PACKAGE_gst1-mod-wavparse=y
 CONFIG_PACKAGE_gst1-plugins-bad=y
 CONFIG_PACKAGE_gst1-plugins-base=y
 CONFIG_PACKAGE_gst1-plugins-good=y
-CONFIG_PACKAGE_gst1-plugins-ugly=y
 CONFIG_PACKAGE_gstreamer1=y
 CONFIG_PACKAGE_gstreamer1-libs=y
 
@@ -4522,16 +4517,7 @@ CONFIG_gst1-plugins-good-all=y
 #
 # Modules
 #
-CONFIG_PACKAGE_gstreamer1-plugins-ugly=y
-
-#
-# Select GStreamer ugly modules
-#
-CONFIG_gst1-plugins-ugly-all=y
-
-#
-# Modules
-#
+# CONFIG_PACKAGE_gstreamer1-plugins-ugly is not set
 CONFIG_PACKAGE_gstreamer1-utils=y
 # CONFIG_PACKAGE_icecast is not set
 # CONFIG_PACKAGE_lcdgrilo is not set
